# python-playwright-google-search

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  opencode.json.sample  pyproject.toml  pytest.ini
skill-for-cli/: SKILL.md
src/playwright_google_search/: browser_utils.py  cli.py  mcp.py  mcp_client.py  mcp_server.py  page_content.py  search.py
tests/: test_page_content.py
