[project]
name = "playwright-google-search"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.3,<3",
    "playwright>=1.55.0",
    "beautifulsoup4>=4.13.5",
    "typer>=0.19.2",
    "markitdown[all]>=0.1.3",
]

[project.scripts]
google-search-mcp-server = "playwright_google_search.mcp_server:MCP.run"
google-search-cli = "playwright_google_search.cli:APP"
google-search-mcp-cli = "playwright_google_search.mcp_client:APP"

[tool.pyright]
reportCallInDefaultInitializer = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.31.5",
    "pytest>=8.4.2",
    "pytest-env>=1.1.5",
    "ruff>=0.13.2",
]

[[project.authors]]
name = "Ceshine Lee"
email = "shuanck@gmail.com"

[tool.hatch.build.targets.wheel]
packages = ["src/playwright_google_search"]
